--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "blake3": "^3.0.0",
     "crypto-js": "^4.2.0",
     "elliptic": "^6.5.7",
     "js-sha256": "^0.11.0",
     "js-sha512": "^0.9.0",
+    "konva": "^9.3.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-konva": "^18.2.10",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "blake3-wasm": "^3.0.0",
+    "@c4312/blake3-internal": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
